Make sure to fire no mutation events or internal notifications on attribute changes that don't change the attr value.  Bug 209634, r=caillon, sr=jst